# docs/swagger.json
@@ -212,6 +212,206 @@
           }
         }
       }
+    },
+    "/wishlist/{userId}": {
+      "post": {
+        "summary": "Create a new bank in the user's wishlist",
+        "tags": ["Wishlist"],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "userId",
+            "description": "User id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "required": true
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/WishlistItem"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "201 response. Created",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "success": {
+                    "value": "{\n \"id\": \"wishlist item id\",\n \"message\": \"New wishlist bank created\"\n}\n"
+                  }
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "422 response. Unprocessable Entity",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "invalid_fields": {
+                    "value": "{\n \"message\": \"Invalid or not all inputs passed.\"\n}\n"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "summary": "Get all banks from the user's wishlist",
+        "tags": ["Wishlist"],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "userId",
+            "description": "User id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "required": true
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "200 response. OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ResponseWishlistItems"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/wishlist/{userId}/update/{wishlistItemId}": {
+      "patch": {
+        "summary": "Update info of bank in wishlist",
+        "tags": ["Wishlist"],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "userId",
+            "description": "User id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "required": true
+            }
+          },
+          {
+            "in": "path",
+            "name": "wishlistItemId",
+            "description": "User's wishlist bank id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "required": true
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateWishlistItem"
+              }
+            }
+          }
+        },
+        "responses": {
+          "202": {
+            "description": "202 response. Accepted",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "success": {
+                    "value": "{\n \"message\": \"Wishlist item updated\"\n}\n"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "400 response. Bad Request",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "invalid_ids": {
+                    "value": "{\n \"message\": \"Attempt to update not own or existing bank.\"\n}\n"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/wishlist/{userId}/delete/{wishlistItemId}": {
+      "delete": {
+        "summary": "Delete bank from the user's wishlist",
+        "tags": ["Wishlist"],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "userId",
+            "description": "User id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "required": true
+            }
+          },
+          {
+            "in": "path",
+            "name": "wishlistItemId",
+            "description": "User's wishlist bank id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "required": true
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "200 response. OK",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "success": {
+                    "value": "{\n \"message\": \"Wishlist item deleted\"\n}\n"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "400 response. Bad Request",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "invalid_ids": {
+                    "value": "{\n \"message\": \"Attempt to delete not existing bank.\"\n}\n"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -266,6 +466,64 @@
         "allOf": [
           {
             "$ref": "#/components/schemas/User"
+          },
+          {
+            "type": "object",
+            "properties": {
+              "createdAt": {
+                "type": "string"
+              },
+              "id": {
+                "type": "string"
+              }
+            }
+          }
+        ]
+      },
+      "WishlistItem": {
+        "type": "object",
+        "required": ["name", "ownerId", "finalGoal"],
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "ownerId": {
+            "type": "string"
+          },
+          "image": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string",
+            "maxLength": 255
+          },
+          "finalGoal": {
+            "type": "number"
+          }
+        }
+      },
+      "UpdateWishlistItem": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "image": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string",
+            "maxLength": 255
+          },
+          "finalGoal": {
+            "type": "number"
+          }
+        }
+      },
+      "ResponseWishlistItems": {
+        "allOf": [
+          {
+            "$ref": "#/components/schemas/WishlistItem"
           },
           {
             "type": "object",
